# Cache

./: .gitignore  CMakeLists.txt  README.md  gen_tests.py  run_test.sh  run_test_ideal.sh
headers/: 2q_cache.hpp  ideal_cache.hpp  lru_cache.hpp
src/: ideal_cache.cpp  main.cpp
